# screener_automation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_weekly.bat  run_weekly.py
.claude/: settings.local.json
config/: screeners.yaml  universes.yaml
docs/brainstorms/: 2026-04-24-relax-postfilter-and-add-rs-screeners-brainstorm.md  2026-04-30-tradingview-1000-symbol-limit-brainstorm.md  2026-05-07-tradingview-symbol-resolution-brainstorm.md
docs/plans/: 2026-04-27-feat-relax-postfilter-and-add-rs-screeners-plan.md  2026-05-08-fix-tradingview-symbol-resolution-plan.md
src/: __init__.py  data.py  export.py  indicators.py  screener.py  universe.py  validate.py
tests/: conftest.py  test_engine_schema_check.py  test_p1_infinity.py  test_p2p3_rate_limit.py  test_p4_negative_cache.py  test_p5_checkpoint.py  test_p6_tv_symbols.py  test_p7_benchmark_negative_cache.py  test_pipeline_three_groups.py  test_rs_indicators.py
